--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -163,6 +163,13 @@
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
+              <iframe src="https://drive.google.com/file/d/1V0xLE31pqyIxnM6qCl2Uo5Ryja0je237/preview" width="200" height="260" allow="autoplay"></iframe>
+              <figcaption>Radiciação - Exercícios</figcaption>
+              <p>Prof. Marcelo<br>21/06/2022</p>
+            </figure>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
+            <figure>
               <iframe src="https://drive.google.com/file/d/139Di17UH55uj-VQfGn2rjXIi_X5DtApv/preview" width="200" height="260" allow="autoplay"></iframe>
               <figcaption>Conjuntos - Exercícios</figcaption>
               <p>Prof. Marco<br>24/03/2022</p>
