Atualização de Versão #5, de 21/06/2022: atualizado o material de apoio.

--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -59,12 +59,18 @@
       <h6 class="blog" >Matemática</h6>
       <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/10SXJ63waPj8p51OxOtu3HvodpdWAs3am/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>09/03/2022<br>Exercícios de Matemática <br>Prof. Luíz Virgílio</p>
+          <figure>
+            <iframe src="https://drive.google.com/file/d/10SXJ63waPj8p51OxOtu3HvodpdWAs3am/preview" width="200" height="260" allow="autoplay"></iframe>
+            <figcaption>Matemática - Exercícios</figcaption>
+            <p>Prof. Luíz Virgílio<br>09/03/2022</p>
+          </figure>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-          <iframe src="https://drive.google.com/file/d/1Dmv9tOX4nOW-adt-RuCpTKefTDB8BOu9/preview" width="200" height="260" allow="autoplay"></iframe>
-          <p>02/03/2022<br>Apostila de Matemática</p>
+          <figure>
+            <iframe src="https://drive.google.com/file/d/1Dmv9tOX4nOW-adt-RuCpTKefTDB8BOu9/preview" width="200" height="260" allow="autoplay"></iframe>
+            <figcaption>Matemática - Apostila</figcaption>
+            <p>02/03/2022</p>
+          </figure>
         </div>
       </div>
       <h6 class="blog"><a name="cm-iniciante-port">Português</a></h6>
@@ -144,18 +150,24 @@
             <p>Clique no botão abaixo para acessar nosso canal no YouTube...</p>
             <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
                 <i class="fab fa-youtube"></i></a>
-                <p>...onde temos mais de 3 mil questões resolvidas de vários Colégios Militares de todo país.</p>
+                <p>...onde temos mais de 3 mil questões resolvidas de vários Colégios Militares de todo o país.</p>
           </div>
         </div>
         <h6 class="blog"><a name="cm-avancada-port">Português</a></h6>
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6">
-            <iframe src="https://drive.google.com/file/d/1Gnt55zVaIVk5AIKnDdnTmMLXNrXw2EUp/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>Aula de 09/08/2021 <br> Elementos da Narrativa: Tempo e Espaço <br> Prof.ª Giovana</p>
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1Gnt55zVaIVk5AIKnDdnTmMLXNrXw2EUp/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Elementos da Narrativa: Tempo e Espaço</figcaption>
+              <p>Prof.ª Giovana<br>09/08/2021</p>
+            </figure>
           </div>
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-4">
-            <iframe src="https://drive.google.com/file/d/1NOuS1QY5vgVFZkV1Gz9spg1TZajlJ6PZ/preview" width="260" height="160" allow="autoplay"></iframe>
-            <p>Aula de 09/08/2021 <br> Elementos da Narrativa: Exercícios <br> Prof.ª Giovana</p>
+            <figure>
+              <iframe src="https://drive.google.com/file/d/1NOuS1QY5vgVFZkV1Gz9spg1TZajlJ6PZ/preview" width="260" height="160" allow="autoplay"></iframe>
+              <figcaption>Elementos da Narrativa: Exercícios</figcaption>
+              <p>Prof.ª Giovana<br>09/08/2021</p>
+            </figure>
           </div>
         </div>
         <h6 class="blog"><a name="if-mat">Preparatório IFMS</a></h6>
