Atualização de Versão de 22/08/2022: incluído o banner e o hotsite Inscrições CM 2022/2023.

--- a/colaboradores.html
+++ b/colaboradores.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="africa.html">África - Ensino Médio</a>
+            <a class="nav-link" href="africa.html">África</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="espiritismo.html">Espiritismo</a>
@@ -88,6 +88,7 @@
           <p><a href="colaboradores.html">Colaboradores</a></p>
           <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
           <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
+          <p><a href="relatorios.html">Relatórios Gerenciais</a></p>
         </div>
       </div>
     </div>
