--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><i class="fas fa-book-open"></i>Instituto Ser Integral</a><!-- <img src="img/logo-ser-integral_t3.png" alt="Página inicial"> -->
+            <a class="navbar-brand" href="./index.html" fas fa-book-open"></i>Instituto Ser Integral</a><!-- <img src="img/logo-ser-integral_t3.png" alt="Página inicial"> -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,7 +51,7 @@
                         <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="africa.html">África - Ensino Médio</a>
+                        <a class="nav-link" href="africa.html">África</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="espiritismo.html">Espiritismo</a>
@@ -78,6 +78,9 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <a href="./hotsite/hotsite-inscricoes-cm.html"> <img src="./img/inscricoes-cm-2022-resized.png" class="img-fluid"> </a>
+            </div>
+            <div class="carousel-item">
                 <a href="provas-e-simulados.html"><img src="./img/simulados.png" class="img-fluid"></a> 
             </div>
             <div class="carousel-item">
@@ -193,10 +196,11 @@
                     autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <h6 class="card-title">Turma Iniciante</h6>
                         <p class="card-text">Redação<br><br>Letras Maiúsculas e Minúsculas</p>
-                    </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid padding">
         <!-- MATEMÁTICA -->
         <div class="col-12">
             <h6>Matemática</h6>
@@ -241,7 +245,7 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                 <div class="card text-white bg-primary">
                     <iframe src="https://www.youtube.com/embed/Cjad9jRpkdQ" title="África - Ensino Médio"
-                     frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
                      gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="card-body">
                         <h6 class="card-title">África - Ensino Médio</h6>
@@ -250,6 +254,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="container-fluid padding">
         <!-- PORTUGUÊS -->
         <div class="col-12">
             <h6>Português</h6>
@@ -302,6 +308,7 @@
                 </div>
             </div>
         </div>
+    </div>
             <!-- REDAÇÃO -->
             <!-- VÍDEO 1 -->
             
@@ -344,14 +351,14 @@
                   <p>Campo Grande, MS, 79.015-480</p>
                 </div>
                 <div class="col-md-4">
-                    <hr>
+                  <hr>
                   <h6>Horários (BSB)</h6>
                   <hr>
                   <p>Segunda, Quarta e Sexta</p>
                   <p>8h - 11h40min | 14h - 17h40min</p>
                 </div>
                 <div class="col-md-4">
-                    <hr>
+                  <hr>
                   <h6>Tópicos</h6>
                   <hr>
                   <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
@@ -363,13 +370,17 @@
                   <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
                   <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
                 </div>
+                <div class="col-12">
+                    <hr>
+                    <h6>ISI na Mídia</h6>
+                    <hr>
+                    <p><a href="https://www.acritica.net/editorias/geral/fac-e-instituto-levam-aulas-de-reforco-e-assistencia-a-familias-em-sit/557344/" target="_blank">A Crítica</a></p>
+                </div>
               </div>
             </div>
           </footer>
-    </div>
     <div style="position:fixed; bottom:0px; right:30px;">
         <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
     </div>
 </body>
-
 </html>
