--- a/material-de-apoio.html
+++ b/material-de-apoio.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="africa.html">África - Ensino Médio</a>
+              <a class="nav-link" href="africa.html">África</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="espiritismo.html">Espiritismo</a>
@@ -175,8 +175,9 @@
         <div class="row text-center padding">
           <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 col-xl-3">
             <figure>
-              <iframe src="https://drive.google.com/file/d/1V0xLE31pqyIxnM6qCl2Uo5Ryja0je237/preview" width="200" height="260" allow="autoplay"></iframe>
+              <iframe src="https://drive.google.com/file/d/1V0xLE31pqyIxnM6qCl2Uo5Ryja0je237/preview" width="200" height="160" allow="autoplay"></iframe>
               <figcaption>Radiciação - Exercícios</figcaption>
+              <a href="radiciacao-exercicios-prof-marcelo-21062022.html"><i class="fas fa-book-open"></i>Flipbook</a>
               <p>Prof. Marcelo<br>21/06/2022</p>
             </figure>
           </div>
@@ -302,43 +303,45 @@
             <p>22/06/2021 - Orações Subordinadas Substantivas <br> Prof.ª Ayla</p>
           </div>
         </div>
-
-  <footer class="footer">
-    <div class="container-fluid padding">
-      <div class="row text-center">
-        <div class="col-md-4">
-          <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
-          <hr>
-          <h6>Fale Conosco</h6>
-          <hr>
-          <p>projetoavante00@gmail.com</p>
-          <p>Avenida Gualter Barbosa, 1.206</p>
-          <p>Campo Grande, MS, 79.015-480</p>
-        </div>
-        <div class="col-md-4">
-          <hr>
-          <h6>Horários (BSB)</h6>
-          <hr>
-          <p>Segunda, Quarta e Sexta</p>
-          <p>8h - 11h40min | 14h - 17h40min</p>
-        </div>
-        <div class="col-md-4">
-          <hr>
-          <h6>Tópicos</h6>
-          <hr>
-          <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
-          <p><a href="material-de-apoio.html">Material de Apoio</a></p>
-          <p><a href="ajuda.html">Ajuda</a></p>
-          <p><a href="quem-somos.html">Quem Somos</a></p>
-          <p><a href="missao.html">Missão</a></p>
-          <p><a href="colaboradores.html">Colaboradores</a></p>
-          <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
-          <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
-        </div>
       </div>
     </div>
-  </footer>
+    <footer class="footer">
+      <div class="container-fluid padding">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <!-- <img src="img/logo-ser-integral_t2.png" alt="Página inicial"> -->
+            <hr>
+            <h6>Fale Conosco</h6>
+            <hr>
+            <p>projetoavante00@gmail.com</p>
+            <p>Avenida Gualter Barbosa, 1.206</p>
+            <p>Campo Grande, MS, 79.015-480</p>
+          </div>
+          <div class="col-md-4">
+            <hr>
+            <h6>Horários (BSB)</h6>
+            <hr>
+            <p>Segunda, Quarta e Sexta</p>
+            <p>8h - 11h40min | 14h - 17h40min</p>
+          </div>
+          <div class="col-md-4">
+            <hr>
+            <h6>Tópicos</h6>
+            <hr>
+            <p><a href="provas-e-simulados.html">Provas e Simulados</a></p>
+            <p><a href="material-de-apoio.html">Material de Apoio</a></p>
+            <p><a href="ajuda.html">Ajuda</a></p>
+            <p><a href="quem-somos.html">Quem Somos</a></p>
+            <p><a href="missao.html">Missão</a></p>
+            <p><a href="colaboradores.html">Colaboradores</a></p>
+            <p><a href="https://www.linkedin.com/in/alanderson-americo/" target="_blank">@author</a></p>
+            <!-- <p><a href="patrocinadores.html">Seja um Patrocinador</a></p> -->
+          </div>
+        </div>
+      </div>
+    </footer>
   <div style="position:fixed; bottom:0px; right:30px;">
     <a href="#" title="Voltar para o topo"><i class="fas fa-arrow-alt-circle-up"></i></a>
+  </div>
 </body>
 </html>
