--- a/turmaavancada.html
+++ b/turmaavancada.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="africa.html">África - Ensino Médio</a>
+              <a class="nav-link" href="africa.html">África</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="espiritismo.html">Espiritismo</a>
@@ -51,7 +51,36 @@
   <div class="container-fluid padding">
     <div class="row text-center padding">
       <div class="col-12 social">
-          <h4>Preparatório CM - Turma Avançada</h4>
+        <h4>Turma Iniciante<h4>
+          <a href="https://www.youtube.com/channel/UCWhh6tIOyWI_qbVWsTJCqbA" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
+            <i class="fab fa-youtube"></i></a>
+      </div>
+    </div>
+    <div class="row text-center padding">
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <iframe src="https://www.youtube.com/embed/bEIG-PSJAHQ" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <iframe src="https://www.youtube.com/embed/3eZgDrWFbiw" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <iframe src="https://www.youtube.com/embed/dduzC7FEPC0" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+        <iframe src="https://www.youtube.com/embed/xsRAA9bHa10" title="YouTube video player" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+        gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+    <div class="row text-center padding">
+      <div class="col-12 social">
+          <h4>Turma Avançada</h4>
           <a href="https://www.youtube.com/channel/UCv_8h0yZl4kV30T8f7xNoAg" target="_blank" title="Clique aqui para acessar o nosso canal no YouTube.">
               <i class="fab fa-youtube"></i></a>
       </div>
