--- a/africa.html
+++ b/africa.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="prep-if.html">Preparatório IFMS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="africa.html"><strong>África - Ensino Médio</strong></a>
+            <a class="nav-link" href="africa.html"><strong>África</strong></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="espiritismo.html">Espiritismo</a>
