--- a/prep-if.html
+++ b/prep-if.html
@@ -39,7 +39,7 @@
                         <a class="nav-link" href="prep-if.html"><strong>Preparatório IFMS</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="africa.html">África - Ensino Médio</a>
+                        <a class="nav-link" href="africa.html">África</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="espiritismo.html">Espiritismo</a>
