Atualização de Versão #2 de 22/08/2022: atualizado o banner Inscrições CM 2022/2023.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li data-target="#slides" data-slide-to="0" class="active"></li>
             <li data-target="#slides" data-slide-to="1"></li>
             <li data-target="#slides" data-slide-to="2"></li>
-            <!-- <li data-target="#slides" data-slide-to="3"></li> -->
+            <li data-target="#slides" data-slide-to="3"></li>
             <!-- <li data-target="#slides" data-slide-to="4"></li> -->
             <!-- <li data-target="#slides" data-slide-to="5"></li> -->
             <!-- <li data-target="#slides" data-slide-to="6"></li> -->
@@ -78,7 +78,7 @@
         <!-- The slideshow -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <a href="./hotsite/hotsite-inscricoes-cm.html"> <img src="./img/inscricoes-cm-2022-resized.png" class="img-fluid"> </a>
+                <a href="./hotsite/hotsite-inscricoes-cm.html"> <img src="./img/inscricoes-cm-2022-resized.png" class="img-fluid"></a>
             </div>
             <div class="carousel-item">
                 <a href="provas-e-simulados.html"><img src="./img/simulados.png" class="img-fluid"></a> 
