--- a/br/novo-calendario.html
+++ b/br/novo-calendario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/br/calendario.css">
-    <title>Document</title>
+    <title>INSTITUTO SER INTEGRAL</title>
 </head>
 <body>
     <h1><span class="blue"><span class="yellow">HORÁRIO DAS AULAS</pan></h1>
